--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "perheneuvo",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Web application to send concerns about kids and family life to city officials",
   "main": "app.js",
   "scripts": {
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/City-of-Mikkeli/perheneuvo.git"
+    "url": "git+https://github.com/Metatavu/perheneuvo.git"
   },
-  "author": "Mikkelin kaupunki",
+  "author": "Mikkelin kaupunki, Metatavu Oy",
   "license": "AGPL-3.0",
   "bugs": {
-    "url": "https://github.com/City-of-Mikkeli/perheneuvo/issues"
+    "url": "https://github.com/Metatavu/perheneuvo/issues"
   },
-  "homepage": "https://github.com/City-of-Mikkeli/perheneuvo#readme",
+  "homepage": "https://github.com/Metatavu/perheneuvo#readme",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
@@ -24,9 +24,9 @@
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "jade": "^1.11.0",
+    "mailgun-js": "^0.7.15",
     "method-override": "^2.3.6",
     "mongoose": "^4.6.2",
-    "nodemailer": "^2.6.4",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "password-generator": "^2.0.2"
